newGramm/ParGramm.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParGramm.y
-----------------------------------------------------------------------------

state 33 contains 1 shift/reduce conflicts.
state 40 contains 14 shift/reduce conflicts.
state 42 contains 13 shift/reduce conflicts.
state 43 contains 5 shift/reduce conflicts.
state 45 contains 2 shift/reduce conflicts.
state 83 contains 1 shift/reduce conflicts.
state 96 contains 13 shift/reduce conflicts.
state 114 contains 1 shift/reduce conflicts.
state 120 contains 14 shift/reduce conflicts.
state 122 contains 5 shift/reduce conflicts.
state 123 contains 7 shift/reduce conflicts.
state 191 contains 1 shift/reduce conflicts.

rule 1 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Integer -> L_integ                                 (1)
	PTrue -> L_PTrue                                   (2)
	PFalse -> L_PFalse                                 (3)
	PReturn -> L_PReturn                               (4)
	PNull -> L_PNull                                   (5)
	PIdent -> L_PIdent                                 (6)
	PFloat -> L_PFloat                                 (7)
	PInteger -> L_PInteger                             (8)
	PString -> L_PString                               (9)
	PChar -> L_PChar                                   (10)
	TypeSpec -> SType                                  (11)
	TypeSpec -> '*' TypeSpec                           (12)
	TypeSpec -> 'Array' '[' TypeSpec ']' '(' PInteger ')'   (13)
	SType -> 'Float'                                   (14)
	SType -> 'Int'                                     (15)
	SType -> 'Char'                                    (16)
	SType -> 'String'                                  (17)
	SType -> 'Bool'                                    (18)
	Program -> ListDeclaration                         (19)
	ListDeclaration ->                                 (20)
	ListDeclaration -> ListDeclaration Declaration     (21)
	Declaration -> 'var' PIdent ':' TypeSpec '=' Exp ';'   (22)
	Declaration -> 'var' PIdent ':' TypeSpec ';'       (23)
	Declaration -> 'def' PIdent ListParamClause ':' TypeSpec '=' Block   (24)
	Declaration -> 'def' PIdent ListParamClause ':' TypeSpec '=' Exp ';'   (25)
	Declaration -> 'def' PIdent ListParamClause '=' Block   (26)
	Declaration -> 'def' PIdent ListParamClause '=' Exp ';'   (27)
	ListParamClause -> ParamClause                     (28)
	ListParamClause -> ParamClause ListParamClause     (29)
	ParamClause -> '(' ListArg ')'                     (30)
	ListArg ->                                         (31)
	ListArg -> Arg                                     (32)
	ListArg -> Arg ',' ListArg                         (33)
	Arg -> PIdent ':' TypeSpec                         (34)
	Block -> '{' ListStm '}'                           (35)
	ListStm ->                                         (36)
	ListStm -> ListStm Stm                             (37)
	Stm -> Declaration                                 (38)
	Stm -> Block                                       (39)
	Stm -> LExp '=' Exp ';'                            (40)
	Stm -> 'while' '(' Exp ')' Stm                     (41)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (42)
	Stm -> 'if' '(' Exp ')' Stm                        (43)
	Stm -> 'do' Stm 'while' '(' Exp ')' ';'            (44)
	Stm -> PReturn ';'                                 (45)
	Stm -> PReturn Exp ';'                             (46)
	Stm -> PIdent ListParams ';'                       (47)
	Stm -> LExp '*=' Exp ';'                           (48)
	Stm -> LExp '/=' Exp ';'                           (49)
	Stm -> LExp '%=' Exp ';'                           (50)
	Stm -> LExp '+=' Exp ';'                           (51)
	Stm -> LExp '-=' Exp ';'                           (52)
	Params -> '(' ListExp ')'                          (53)
	ListParams -> Params                               (54)
	ListParams -> Params ListParams                    (55)
	ListExp ->                                         (56)
	ListExp -> Exp                                     (57)
	ListExp -> Exp ',' ListExp                         (58)
	Op -> '||'                                         (59)
	Op -> Op1                                          (60)
	Op1 -> '&&'                                        (61)
	Op1 -> Op2                                         (62)
	Op2 -> '<'                                         (63)
	Op2 -> '<='                                        (64)
	Op2 -> '>'                                         (65)
	Op2 -> '>='                                        (66)
	Op2 -> '=='                                        (67)
	Op2 -> '!='                                        (68)
	Op2 -> Op3                                         (69)
	Op3 -> '+'                                         (70)
	Op3 -> '-'                                         (71)
	Op3 -> Op4                                         (72)
	Op4 -> '*'                                         (73)
	Op4 -> '/'                                         (74)
	Op4 -> '%'                                         (75)
	Op4 -> Op5                                         (76)
	Op5 -> '^'                                         (77)
	Op5 -> '(' Op ')'                                  (78)
	Exp -> Exp Op Exp1                                 (79)
	Exp -> Exp1                                        (80)
	Exp1 -> Exp1 Op1 Exp2                              (81)
	Exp1 -> Exp2                                       (82)
	Exp2 -> '!' Exp2                                   (83)
	Exp2 -> Exp3 Op2 Exp3                              (84)
	Exp2 -> Exp3                                       (85)
	Exp3 -> Exp3 Op3 Exp4                              (86)
	Exp3 -> Exp4                                       (87)
	Exp4 -> Exp4 Op4 Exp5                              (88)
	Exp4 -> Exp5                                       (89)
	Exp5 -> Exp6 Op5 Exp7                              (90)
	Exp5 -> Exp6                                       (91)
	Exp6 -> '-' Exp7                                   (92)
	Exp6 -> Exp7                                       (93)
	Exp7 -> LExp                                       (94)
	Exp7 -> '&' LExp                                   (95)
	Exp7 -> PInteger                                   (96)
	Exp7 -> PFloat                                     (97)
	Exp7 -> PChar                                      (98)
	Exp7 -> PString                                    (99)
	Exp7 -> PTrue                                      (100)
	Exp7 -> PFalse                                     (101)
	Exp7 -> PNull                                      (102)
	Exp7 -> 'Array' '(' ListExp ')'                    (103)
	Exp7 -> PIdent ListParams                          (104)
	Exp7 -> '(' Exp ')'                                (105)
	LExp -> '*' LExp                                   (106)
	LExp -> LExp1                                      (107)
	LExp1 -> LExp1 '[' Exp ']'                         (108)
	LExp1 -> PIdent                                    (109)
	LExp1 -> '(' LExp ')'                              (110)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'%='           { PT _ (TS _ 4) }
	'&'            { PT _ (TS _ 5) }
	'&&'           { PT _ (TS _ 6) }
	'('            { PT _ (TS _ 7) }
	')'            { PT _ (TS _ 8) }
	'*'            { PT _ (TS _ 9) }
	'*='           { PT _ (TS _ 10) }
	'+'            { PT _ (TS _ 11) }
	'+='           { PT _ (TS _ 12) }
	','            { PT _ (TS _ 13) }
	'-'            { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'/'            { PT _ (TS _ 16) }
	'/='           { PT _ (TS _ 17) }
	':'            { PT _ (TS _ 18) }
	';'            { PT _ (TS _ 19) }
	'<'            { PT _ (TS _ 20) }
	'<='           { PT _ (TS _ 21) }
	'='            { PT _ (TS _ 22) }
	'=='           { PT _ (TS _ 23) }
	'>'            { PT _ (TS _ 24) }
	'>='           { PT _ (TS _ 25) }
	'Array'        { PT _ (TS _ 26) }
	'Bool'         { PT _ (TS _ 27) }
	'Char'         { PT _ (TS _ 28) }
	'Float'        { PT _ (TS _ 29) }
	'Int'          { PT _ (TS _ 30) }
	'String'       { PT _ (TS _ 31) }
	'['            { PT _ (TS _ 32) }
	']'            { PT _ (TS _ 33) }
	'^'            { PT _ (TS _ 34) }
	'def'          { PT _ (TS _ 35) }
	'do'           { PT _ (TS _ 36) }
	'else'         { PT _ (TS _ 37) }
	'if'           { PT _ (TS _ 38) }
	'var'          { PT _ (TS _ 39) }
	'while'        { PT _ (TS _ 40) }
	'{'            { PT _ (TS _ 41) }
	'||'           { PT _ (TS _ 42) }
	'}'            { PT _ (TS _ 43) }
	L_integ        { PT _ (TI $$) }
	L_PTrue        { PT _ (T_PTrue _) }
	L_PFalse       { PT _ (T_PFalse _) }
	L_PReturn      { PT _ (T_PReturn _) }
	L_PNull        { PT _ (T_PNull _) }
	L_PIdent       { PT _ (T_PIdent _) }
	L_PFloat       { PT _ (T_PFloat _) }
	L_PInteger     { PT _ (T_PInteger _) }
	L_PString      { PT _ (T_PString _) }
	L_PChar        { PT _ (T_PChar _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Integer         rule  1
	PTrue           rule  2
	PFalse          rule  3
	PReturn         rule  4
	PNull           rule  5
	PIdent          rule  6
	PFloat          rule  7
	PInteger        rule  8
	PString         rule  9
	PChar           rule  10
	TypeSpec        rules 11, 12, 13
	SType           rules 14, 15, 16, 17, 18
	Program         rule  19
	ListDeclaration rules 20, 21
	Declaration     rules 22, 23, 24, 25, 26, 27
	ListParamClause rules 28, 29
	ParamClause     rule  30
	ListArg         rules 31, 32, 33
	Arg             rule  34
	Block           rule  35
	ListStm         rules 36, 37
	Stm             rules 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52
	Params          rule  53
	ListParams      rules 54, 55
	ListExp         rules 56, 57, 58
	Op              rules 59, 60
	Op1             rules 61, 62
	Op2             rules 63, 64, 65, 66, 67, 68, 69
	Op3             rules 70, 71, 72
	Op4             rules 73, 74, 75, 76
	Op5             rules 77, 78
	Exp             rules 79, 80
	Exp1            rules 81, 82
	Exp2            rules 83, 84, 85
	Exp3            rules 86, 87
	Exp4            rules 88, 89
	Exp5            rules 90, 91
	Exp6            rules 92, 93
	Exp7            rules 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105
	LExp            rules 106, 107
	LExp1           rules 108, 109, 110

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'def'          reduce using rule 20
	'var'          reduce using rule 20
	%eof           reduce using rule 20

	Program        goto state 3
	ListDeclarationgoto state 4

State 1


	L_integ        shift, and enter state 2


State 2

	Integer -> L_integ .                                (rule 1)



State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	Program -> ListDeclaration .                        (rule 19)
	ListDeclaration -> ListDeclaration . Declaration    (rule 21)

	'def'          shift, and enter state 6
	'var'          shift, and enter state 7
	%eof           reduce using rule 19

	Declaration    goto state 5

State 5

	ListDeclaration -> ListDeclaration Declaration .    (rule 21)

	'def'          reduce using rule 21
	'var'          reduce using rule 21
	%eof           reduce using rule 21


State 6

	Declaration -> 'def' . PIdent ListParamClause ':' TypeSpec '=' Block    (rule 24)
	Declaration -> 'def' . PIdent ListParamClause ':' TypeSpec '=' Exp ';'    (rule 25)
	Declaration -> 'def' . PIdent ListParamClause '=' Block    (rule 26)
	Declaration -> 'def' . PIdent ListParamClause '=' Exp ';'    (rule 27)

	L_PIdent       shift, and enter state 9

	PIdent         goto state 10

State 7

	Declaration -> 'var' . PIdent ':' TypeSpec '=' Exp ';'    (rule 22)
	Declaration -> 'var' . PIdent ':' TypeSpec ';'      (rule 23)

	L_PIdent       shift, and enter state 9

	PIdent         goto state 8

State 8

	Declaration -> 'var' PIdent . ':' TypeSpec '=' Exp ';'    (rule 22)
	Declaration -> 'var' PIdent . ':' TypeSpec ';'      (rule 23)

	':'            shift, and enter state 14


State 9

	PIdent -> L_PIdent .                                (rule 6)

	'!='           reduce using rule 6
	'%'            reduce using rule 6
	'%='           reduce using rule 6
	'&&'           reduce using rule 6
	'('            reduce using rule 6
	')'            reduce using rule 6
	'*'            reduce using rule 6
	'*='           reduce using rule 6
	'+'            reduce using rule 6
	'+='           reduce using rule 6
	','            reduce using rule 6
	'-'            reduce using rule 6
	'-='           reduce using rule 6
	'/'            reduce using rule 6
	'/='           reduce using rule 6
	':'            reduce using rule 6
	';'            reduce using rule 6
	'<'            reduce using rule 6
	'<='           reduce using rule 6
	'='            reduce using rule 6
	'=='           reduce using rule 6
	'>'            reduce using rule 6
	'>='           reduce using rule 6
	'['            reduce using rule 6
	']'            reduce using rule 6
	'^'            reduce using rule 6
	'||'           reduce using rule 6


State 10

	Declaration -> 'def' PIdent . ListParamClause ':' TypeSpec '=' Block    (rule 24)
	Declaration -> 'def' PIdent . ListParamClause ':' TypeSpec '=' Exp ';'    (rule 25)
	Declaration -> 'def' PIdent . ListParamClause '=' Block    (rule 26)
	Declaration -> 'def' PIdent . ListParamClause '=' Exp ';'    (rule 27)

	'('            shift, and enter state 13

	ListParamClausegoto state 11
	ParamClause    goto state 12

State 11

	Declaration -> 'def' PIdent ListParamClause . ':' TypeSpec '=' Block    (rule 24)
	Declaration -> 'def' PIdent ListParamClause . ':' TypeSpec '=' Exp ';'    (rule 25)
	Declaration -> 'def' PIdent ListParamClause . '=' Block    (rule 26)
	Declaration -> 'def' PIdent ListParamClause . '=' Exp ';'    (rule 27)

	':'            shift, and enter state 28
	'='            shift, and enter state 29


State 12

	ListParamClause -> ParamClause .                    (rule 28)
	ListParamClause -> ParamClause . ListParamClause    (rule 29)

	'('            shift, and enter state 13
	':'            reduce using rule 28
	'='            reduce using rule 28

	ListParamClausegoto state 27
	ParamClause    goto state 12

State 13

	ParamClause -> '(' . ListArg ')'                    (rule 30)

	')'            reduce using rule 31
	L_PIdent       shift, and enter state 9

	PIdent         goto state 24
	ListArg        goto state 25
	Arg            goto state 26

State 14

	Declaration -> 'var' PIdent ':' . TypeSpec '=' Exp ';'    (rule 22)
	Declaration -> 'var' PIdent ':' . TypeSpec ';'      (rule 23)

	'*'            shift, and enter state 17
	'Array'        shift, and enter state 18
	'Bool'         shift, and enter state 19
	'Char'         shift, and enter state 20
	'Float'        shift, and enter state 21
	'Int'          shift, and enter state 22
	'String'       shift, and enter state 23

	TypeSpec       goto state 15
	SType          goto state 16

State 15

	Declaration -> 'var' PIdent ':' TypeSpec . '=' Exp ';'    (rule 22)
	Declaration -> 'var' PIdent ':' TypeSpec . ';'      (rule 23)

	';'            shift, and enter state 69
	'='            shift, and enter state 70


State 16

	TypeSpec -> SType .                                 (rule 11)

	')'            reduce using rule 11
	','            reduce using rule 11
	';'            reduce using rule 11
	'='            reduce using rule 11
	']'            reduce using rule 11


State 17

	TypeSpec -> '*' . TypeSpec                          (rule 12)

	'*'            shift, and enter state 17
	'Array'        shift, and enter state 18
	'Bool'         shift, and enter state 19
	'Char'         shift, and enter state 20
	'Float'        shift, and enter state 21
	'Int'          shift, and enter state 22
	'String'       shift, and enter state 23

	TypeSpec       goto state 68
	SType          goto state 16

State 18

	TypeSpec -> 'Array' . '[' TypeSpec ']' '(' PInteger ')'    (rule 13)

	'['            shift, and enter state 67


State 19

	SType -> 'Bool' .                                   (rule 18)

	')'            reduce using rule 18
	','            reduce using rule 18
	';'            reduce using rule 18
	'='            reduce using rule 18
	']'            reduce using rule 18


State 20

	SType -> 'Char' .                                   (rule 16)

	')'            reduce using rule 16
	','            reduce using rule 16
	';'            reduce using rule 16
	'='            reduce using rule 16
	']'            reduce using rule 16


State 21

	SType -> 'Float' .                                  (rule 14)

	')'            reduce using rule 14
	','            reduce using rule 14
	';'            reduce using rule 14
	'='            reduce using rule 14
	']'            reduce using rule 14


State 22

	SType -> 'Int' .                                    (rule 15)

	')'            reduce using rule 15
	','            reduce using rule 15
	';'            reduce using rule 15
	'='            reduce using rule 15
	']'            reduce using rule 15


State 23

	SType -> 'String' .                                 (rule 17)

	')'            reduce using rule 17
	','            reduce using rule 17
	';'            reduce using rule 17
	'='            reduce using rule 17
	']'            reduce using rule 17


State 24

	Arg -> PIdent . ':' TypeSpec                        (rule 34)

	':'            shift, and enter state 66


State 25

	ParamClause -> '(' ListArg . ')'                    (rule 30)

	')'            shift, and enter state 65


State 26

	ListArg -> Arg .                                    (rule 32)
	ListArg -> Arg . ',' ListArg                        (rule 33)

	')'            reduce using rule 32
	','            shift, and enter state 64


State 27

	ListParamClause -> ParamClause ListParamClause .    (rule 29)

	':'            reduce using rule 29
	'='            reduce using rule 29


State 28

	Declaration -> 'def' PIdent ListParamClause ':' . TypeSpec '=' Block    (rule 24)
	Declaration -> 'def' PIdent ListParamClause ':' . TypeSpec '=' Exp ';'    (rule 25)

	'*'            shift, and enter state 17
	'Array'        shift, and enter state 18
	'Bool'         shift, and enter state 19
	'Char'         shift, and enter state 20
	'Float'        shift, and enter state 21
	'Int'          shift, and enter state 22
	'String'       shift, and enter state 23

	TypeSpec       goto state 63
	SType          goto state 16

State 29

	Declaration -> 'def' PIdent ListParamClause '=' . Block    (rule 26)
	Declaration -> 'def' PIdent ListParamClause '=' . Exp ';'    (rule 27)

	'!'            shift, and enter state 49
	'&'            shift, and enter state 50
	'('            shift, and enter state 51
	'*'            shift, and enter state 52
	'-'            shift, and enter state 53
	'Array'        shift, and enter state 54
	'{'            shift, and enter state 55
	L_PTrue        shift, and enter state 56
	L_PFalse       shift, and enter state 57
	L_PNull        shift, and enter state 58
	L_PIdent       shift, and enter state 9
	L_PFloat       shift, and enter state 59
	L_PInteger     shift, and enter state 60
	L_PString      shift, and enter state 61
	L_PChar        shift, and enter state 62

	PTrue          goto state 30
	PFalse         goto state 31
	PNull          goto state 32
	PIdent         goto state 33
	PFloat         goto state 34
	PInteger       goto state 35
	PString        goto state 36
	PChar          goto state 37
	Block          goto state 38
	Exp            goto state 39
	Exp1           goto state 40
	Exp2           goto state 41
	Exp3           goto state 42
	Exp4           goto state 43
	Exp5           goto state 44
	Exp6           goto state 45
	Exp7           goto state 46
	LExp           goto state 47
	LExp1          goto state 48

State 30

	Exp7 -> PTrue .                                     (rule 100)

	'!='           reduce using rule 100
	'%'            reduce using rule 100
	'&&'           reduce using rule 100
	'('            reduce using rule 100
	')'            reduce using rule 100
	'*'            reduce using rule 100
	'+'            reduce using rule 100
	','            reduce using rule 100
	'-'            reduce using rule 100
	'/'            reduce using rule 100
	';'            reduce using rule 100
	'<'            reduce using rule 100
	'<='           reduce using rule 100
	'=='           reduce using rule 100
	'>'            reduce using rule 100
	'>='           reduce using rule 100
	']'            reduce using rule 100
	'^'            reduce using rule 100
	'||'           reduce using rule 100


State 31

	Exp7 -> PFalse .                                    (rule 101)

	'!='           reduce using rule 101
	'%'            reduce using rule 101
	'&&'           reduce using rule 101
	'('            reduce using rule 101
	')'            reduce using rule 101
	'*'            reduce using rule 101
	'+'            reduce using rule 101
	','            reduce using rule 101
	'-'            reduce using rule 101
	'/'            reduce using rule 101
	';'            reduce using rule 101
	'<'            reduce using rule 101
	'<='           reduce using rule 101
	'=='           reduce using rule 101
	'>'            reduce using rule 101
	'>='           reduce using rule 101
	']'            reduce using rule 101
	'^'            reduce using rule 101
	'||'           reduce using rule 101


State 32

	Exp7 -> PNull .                                     (rule 102)

	'!='           reduce using rule 102
	'%'            reduce using rule 102
	'&&'           reduce using rule 102
	'('            reduce using rule 102
	')'            reduce using rule 102
	'*'            reduce using rule 102
	'+'            reduce using rule 102
	','            reduce using rule 102
	'-'            reduce using rule 102
	'/'            reduce using rule 102
	';'            reduce using rule 102
	'<'            reduce using rule 102
	'<='           reduce using rule 102
	'=='           reduce using rule 102
	'>'            reduce using rule 102
	'>='           reduce using rule 102
	']'            reduce using rule 102
	'^'            reduce using rule 102
	'||'           reduce using rule 102


State 33

	Exp7 -> PIdent . ListParams                         (rule 104)
	LExp1 -> PIdent .                                   (rule 109)

	'!='           reduce using rule 109
	'%'            reduce using rule 109
	'&&'           reduce using rule 109
	'('            shift, and enter state 116
			(reduce using rule 109)
